--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<button>GO!</button>
 				<p class="text-center"><a href="#">Advanced Search</a></p>
 			</div>
-			<div class="col-sm-4">
+			<div class="col-sm-4 bg-on-small">
 				<div class="sidebar">
 					<h4 class="sidebar-title">
 						What movie is best for you?
@@ -64,7 +64,7 @@
 						</div>
 						<a href="#">More</a>
 						<div class="text-right">
-							<button class="btn btn-primary">
+							<button class="btn btn-primary btn-sidebar">
 								GO!
 							</button>
 						</div>
