Search too big. Sidebar not needed.

--- a/index.html
+++ b/index.html
@@ -34,42 +34,11 @@
 	</nav>
 	<div class="container">
 		<main>
-			<div class="col-sm-8 search-bg">
+			<div class="col-sm-12 search-bg" style="padding: 0 1em">
 				<h1 class="text-uppercase">Search</h1>
 				<input type="text" name="search-box" class="search" placeholder="Movie names, actors, locations, etc.">
 				<button>GO!</button>
 				<p class="text-center"><a href="#">Advanced Search</a></p>
-			</div>
-			<div class="col-sm-4 bg-on-small">
-				<div class="sidebar">
-					<h4 class="sidebar-title">
-						What movie is best for you?
-					</h4>
-					<div>
-						<div class="form-group">
-							<label for="">Location</label>
-							<input type="text" class="form-control">
-						</div>
-						<div class="form-group">
-							<label for="">Age</label>
-							<input type="text" class="form-control">
-						</div>
-						<div class="form-group">
-							<label for="">Gender</label>
-							<input type="text" class="form-control">
-						</div>
-						<div class="form-group">
-							<label for="">Favorite Actor</label>
-							<input type="text" class="form-control">
-						</div>
-						<a href="#">More</a>
-						<div class="text-right">
-							<button class="btn btn-primary btn-sidebar">
-								GO!
-							</button>
-						</div>
-					</div>
-				</div>
 			</div>
 		</main>
 		<div class="divider"></div>
