Search functionality not clear

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
 	<div class="container">
 		<main>
 			<div class="col-sm-12 search-bg" style="padding: 0 1em">
-				<h1 class="text-uppercase">Search</h1>
-				<input type="text" name="search-box" class="search" placeholder="Movie names, actors, locations, etc.">
-				<button>GO!</button>
+				<h1 class="text-uppercase">Search and buy tickets</h1>
+				<small>Look for movies by Movie name, actors, cast or awards</small>
+				<p></p>
+				<input type="text" name="search-box" class="search" placeholder="">
+				<button>Search</button>
 				<p class="text-center"><a href="#">Advanced Search</a></p>
 			</div>
 		</main>
