No one was reading the reviews

--- a/movie-detail.html
+++ b/movie-detail.html
@@ -48,7 +48,7 @@
 			</div>
 			<div class="col-sm-9">
 				<h1>Birdman (2014)</h1>	
-				<h3>4.5 / 5</h3>
+				<h3>4.5 / 5 <small>(<a href="#">Detailed reviews</a>)</small></h3>
 				<p>
 					Rated R
 					Academy award winner Best Picture 2014
