--- a/movie-detail.html
+++ b/movie-detail.html
@@ -33,6 +33,12 @@
 	  </div><!-- /.container-fluid -->
 	</nav>
 	<div class="container">
+		<div class="row">
+			<ol class="breadcrumb">
+			  <li><a href="#">Home</a></li>
+			  <li><a href="#">Birdman (2014)</a></li>
+			</ol>
+		</div>
 		<main>
 			<div class="col-sm-12 search-bg no-pad">
 				<h1 class="text-uppercase">Search</h1>
