Provide descriptive page titles

--- a/movie-detail.html
+++ b/movie-detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>MovieTix</title>
+	<title>MovieTix | Birdman - Buy tickets to your favorite movies</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
